tests/reference/asr-array_05-321b5d3.stderr
semantic error: Assumed size array must be a dummy argument
 --> tests/errors/array_05.f90:2:18
  |
2 |     integer :: w(*)
  |                  ^ 
